Adding the footer.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         It is what allows JavaScript to interact with HTML and CSS dynamically."</blockquote>
 
     <footer>
+        <label>GitHub account:</label>
+        <a href="https://github.com/usanCode" target="_blank">usanCode</a>
 
     </footer>
 </div>
